# simple_gpio

./: .gitmodules  CMakeLists.txt  README.md  config_format.yaml  config_format_ci.yaml  main.cpp  pin_config.xml
.github/workflows/: ci.yaml  ci_container.yaml
include/: gpio.h
misc/docker/: Dockerfile
simple_gpio/: CMakeLists.txt  README.md  gpio.cpp
simple_gpio/include/: gpio.h  xparameters.h
